--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -8,9 +8,19 @@
     android:background="@drawable/item_border"
     android:paddingLeft="5dp">
 
+    <ImageView
+        android:id="@+id/iv_recommend_item_thumbnail2"
+        android:layout_width="75dp"
+        android:layout_height="100dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/digimon"
+        android:scaleType="fitXY"
+        tools:ignore="MissingConstraints" />
     <TextView
         android:id="@+id/ListView_oneitem_title_TV"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:text="text1"
@@ -18,11 +28,12 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_toRightOf="@id/iv_recommend_item_thumbnail2"/>
 
     <TextView
         android:id="@+id/pageNum"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:text="text2"
@@ -30,11 +41,12 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ListView_oneitem_title_TV" />
+        app:layout_constraintTop_toBottomOf="@+id/ListView_oneitem_title_TV"
+        android:layout_toRightOf="@id/iv_recommend_item_thumbnail2"/>
 
     <TextView
         android:id="@+id/currentPage"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:text="0 p"
@@ -42,5 +54,7 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pageNum" />
+        app:layout_constraintTop_toBottomOf="@+id/pageNum"
+        android:layout_toRightOf="@id/iv_recommend_item_thumbnail2"/>
+
 </android.support.constraint.ConstraintLayout>
