--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -15,26 +15,25 @@
             android:id="@+id/text_view_board_write_book"
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:background="@drawable/textview"
             android:gravity="center_vertical"
-            android:background="@color/primaryDeep"
             android:paddingLeft="10dp"
             android:text="도서"
-            android:textSize="15sp"/>
+            android:textSize="15sp" />
 
         <EditText
             android:id="@+id/et_write_image"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_below="@id/text_view_board_write_title"
-            android:hint="책 검색을 가장 먼저 해주세요!"/>
+            android:hint="책 검색을 가장 먼저 해주세요!" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_search_book"
             android:layout_width="match_parent"
             android:layout_height="110dp"
             android:layout_below="@id/et_write_image"
-            android:scrollbars="vertical">
-        </android.support.v7.widget.RecyclerView>
+            android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>
     </LinearLayout>
 
     <LinearLayout
@@ -48,11 +47,11 @@
             android:id="@+id/text_view_board_write_title"
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:background="@drawable/textview"
             android:gravity="center_vertical"
-            android:background="@color/primaryDeep"
             android:paddingLeft="10dp"
             android:text="제목"
-            android:textSize="15sp"/>
+            android:textSize="15sp" />
 
         <EditText
             android:id="@+id/et_write_title"
@@ -61,7 +60,7 @@
             android:hint="제목을 입력하세요"
             android:textColor="@android:color/black"
             android:textSize="20sp"
-            tools:ignore="HardCodedText"/>
+            tools:ignore="HardCodedText" />
     </LinearLayout>
 
     <LinearLayout
@@ -79,7 +78,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginBottom="10dp"
             android:text="0000-00-00 00:00"
-            android:textSize="15dp"/>
+            android:textSize="15dp" />
 
         <TextView
             android:id="@+id/text_view_write_name"
@@ -88,41 +87,46 @@
             android:layout_marginLeft="20dp"
             android:gravity="center"
             android:text="작성자"
-            android:textSize="15dp"/>
+            android:textSize="15dp" />
 
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/ll_write4"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/ll_write3"
         android:layout_above="@id/btn_upload_board"
+        android:layout_below="@id/ll_write3"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/text_view_board_write_content"
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:background="@drawable/textview"
             android:gravity="center_vertical"
-            android:background="@color/primaryDeep"
             android:paddingLeft="10dp"
             android:text="내용"
-            android:textSize="15sp"/>
+            android:textSize="15sp" />
+
         <EditText
             android:id="@+id/et_write_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="내용을 입력하세요"
-            android:textColor="@android:color/black"
             android:scrollbars="vertical"
+            android:textColor="@android:color/black"
             android:textSize="18sp"
-            tools:ignore="HardCodedText"/>
+            tools:ignore="HardCodedText" />
     </LinearLayout>
+
     <Button
         android:id="@+id/btn_upload_board"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/button"
         android:text="작성"
         tools:ignore="HardCodedText" />
 </RelativeLayout>
