--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -10,7 +10,7 @@
         android:strokeWidth="1"
         android:strokeColor="#00000000">
         <aapt:attr name="android:fillColor">
-            <gradient
+            <gradien
                 android:endX="78.5885"
                 android:endY="90.9159"
                 android:startX="48.7653"
@@ -22,7 +22,7 @@
                 <item
                     android:color="#00000000"
                     android:offset="1.0" />
-            </gradient>
+            </gradien>
         </aapt:attr>
     </path>
     <path
