--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:id="@+id/layout_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightGray"
+    android:background="@color/primaryDeep"
     tools:context=".LoginActivity">
 
 
@@ -14,7 +14,7 @@
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_centerInParent="true"
-        android:background="@drawable/digimon" />
+        android:background="@drawable/logo_plus" />
 
 
     <com.google.android.gms.common.SignInButton
@@ -33,7 +33,8 @@
         android:layout_below="@id/btn_google_login"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:text="원활한 서비스를 위해 로그인이 필요합니다."
-        android:textColor="@color/blackSoft"
-        android:textSize="16dp" />
+        android:text="원활한 서비스를 위해\n로그인이 필요합니다."
+        android:textColor="@color/white"
+        android:textSize="18dp"
+        android:textStyle="bold" />
 </RelativeLayout>
