--- a/app/src/main/res/layout/fragment_menu1.xml
+++ b/app/src/main/res/layout/fragment_menu1.xml
@@ -9,19 +9,24 @@
         android:id="@+id/btn_menu1_ranked_book"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="@color/primary"
+        android:background="@drawable/button"
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
         android:text="추천도서 TOP 30"
         android:textColor="@color/white"
         android:textSize="16dp"
         android:textStyle="bold" />
 
     <ImageView
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:layout_weight="1"
-        android:background="@drawable/digimon" />
+        android:background="@color/primaryDeep"
+        android:src="@drawable/logo_plus" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -60,8 +65,8 @@
 
         <ImageButton
             android:id="@+id/image_btn_menu1_profile_settings"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
