--- a/app/src/main/res/layout/item_board_book.xml
+++ b/app/src/main/res/layout/item_board_book.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="2dp"
     app:cardElevation="2dp"
     app:cardMaxElevation="2dp"
@@ -15,21 +15,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/iv_board_item_thumbnail"
-        android:layout_width="65dp"
-        android:layout_height="90dp"
-        android:scaleType="fitXY"/>
+        <ImageView
+            android:id="@+id/iv_board_item_thumbnail"
+            android:layout_width="65dp"
+            android:layout_height="90dp"
+            android:scaleType="fitXY" />
 
         <TextView
             android:id="@+id/text_view_board_item_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/iv_board_item_thumbnail"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@id/iv_board_item_thumbnail"
             android:text="반갑습니다"
-            android:textColor="@android:color/black"
+            android:textColor="@color/blackSoft"
             android:textSize="20sp"
             android:textStyle="bold"
             tools:ignore="HardcodedText" />
@@ -38,8 +38,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_view_board_item_title"
-            android:layout_marginTop="20dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
             android:layout_toRightOf="@id/iv_board_item_thumbnail"
             android:orientation="horizontal">
 
@@ -50,8 +50,9 @@
                 android:layout_marginRight="20dp"
                 android:drawableStart="@drawable/ic_person"
                 android:text="Name"
+                android:textColor="@color/blackSoft"
                 android:textSize="12sp"
-                tools:ignore="HardCodedText"/>
+                tools:ignore="HardCodedText" />
 
             <TextView
                 android:id="@+id/text_view_board_item_time"
@@ -59,8 +60,8 @@
                 android:layout_height="wrap_content"
                 android:drawableStart="@drawable/ic_time"
                 android:gravity="center"
-                android:textSize="12sp"
-                android:text="0000-00-00 00:00"/>
+                android:text="0000-00-00 00:00"
+                android:textSize="12sp" />
 
         </LinearLayout>
     </RelativeLayout>
