--- a/app/src/main/res/layout/item_maraton_book_add.xml
+++ b/app/src/main/res/layout/item_maraton_book_add.xml
@@ -5,21 +5,22 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/book_maraton_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="도서 이름"/>
-        <EditText
-            android:id="@+id/book_maraton_page"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="전체 쪽수"
-            android:inputType="number"/>
-        <Button
-            android:id="@+id/btn_maratonbook_add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="책 추가 +"
-            />
+    <EditText
+        android:id="@+id/book_maraton_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="도서 이름" />
+
+    <EditText
+        android:id="@+id/book_maraton_page"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="전체 쪽수"
+        android:inputType="number" />
+
+    <Button
+        android:id="@+id/btn_maratonbook_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="책 추가 +" />
 </LinearLayout>
