--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
+    android:layout_marginBottom="5dp"
     android:background="@drawable/item_border"
     android:paddingLeft="5dp">
 
@@ -12,49 +13,50 @@
         android:id="@+id/iv_recommend_item_thumbnail2"
         android:layout_width="75dp"
         android:layout_height="100dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         android:background="@drawable/digimon"
         android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
+
     <TextView
-        android:id="@+id/ListView_oneitem_title_TV"
+        android:id="@+id/ListView_item_title_TV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_toRightOf="@id/iv_recommend_item_thumbnail2"
         android:padding="5dp"
         android:text="text1"
         android:textAlignment="textStart"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_toRightOf="@id/iv_recommend_item_thumbnail2"/>
+        app:layout_constraintStart_toEndOf="@+id/iv_recommend_item_thumbnail2"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/pageNum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_toRightOf="@id/iv_recommend_item_thumbnail2"
         android:padding="5dp"
         android:text="text2"
         android:textAlignment="textStart"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ListView_oneitem_title_TV"
-        android:layout_toRightOf="@id/iv_recommend_item_thumbnail2"/>
+        app:layout_constraintStart_toEndOf="@+id/iv_recommend_item_thumbnail2"
+        app:layout_constraintTop_toBottomOf="@+id/ListView_item_title_TV" />
 
     <TextView
         android:id="@+id/currentPage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_toRightOf="@id/iv_recommend_item_thumbnail2"
         android:padding="5dp"
         android:text="0 p"
         android:textAlignment="textStart"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pageNum"
-        android:layout_toRightOf="@id/iv_recommend_item_thumbnail2"/>
+        app:layout_constraintStart_toEndOf="@+id/iv_recommend_item_thumbnail2"
+        app:layout_constraintTop_toBottomOf="@+id/pageNum" />
 
 </android.support.constraint.ConstraintLayout>
