--- a/app/src/main/res/layout/activity_book_maraton_history.xml
+++ b/app/src/main/res/layout/activity_book_maraton_history.xml
@@ -10,12 +10,12 @@
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#E1F5FE"
+        android:background="@drawable/textview"
         android:padding="10dp"
-        android:text="도서 마라톤 히스토리"
+        android:text="독서 마라톤 히스토리"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="#2962FF"
+        android:textColor="@color/blackSoft"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -40,5 +40,7 @@
         android:text="히스토리 삭제"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@drawable/textview"
+        />
 </android.support.constraint.ConstraintLayout>
