--- a/app/src/main/res/layout/activity_book_maraton.xml
+++ b/app/src/main/res/layout/activity_book_maraton.xml
@@ -14,7 +14,8 @@
         android:id="@+id/btn_make_maraton_done"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="도서 마라톤 시작하기" />
+        android:background="@drawable/textview"
+        android:text="독서 마라톤 시작하기" />
 
 
     <LinearLayout
@@ -52,12 +53,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="@drawable/textview"
                 android:text="책 추가 +" />
             <Button
                 android:id="@+id/btn_maratonbook_add_search"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="@drawable/textview"
                 android:text="책 검색" />
 
             <Button
@@ -65,6 +68,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="@drawable/textview"
                 android:text="리스트 삭제" />
 
         </LinearLayout>
